package com.directi.training.isp.exercise_refactored;

public interface ISensing {
    void proximityCallback();
}
