package com.directi.training.isp.exercise_refactored;

public interface ITimed {
    void timeOutCallback();

}
